--- a/index.html
+++ b/index.html
@@ -9,9 +9,14 @@
 </head>
 <body>
     <div class="row">
-        <p>1</p>
-        <p>2</p>
-        <p>3</p>
+        <div class="row">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/2/20/Adidas_Logo.svg" alt="">
+        </div>
+        <div class="row">
+            <p>1</p>
+            <p>2</p>
+            <p>3</p>
+        </div>
     </div>
 </body>
 </html>
