--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="row">
         <div class="row">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/2/20/Adidas_Logo.svg" alt="">
+            <img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/2/20/Adidas_Logo.svg" alt="">
         </div>
         <div class="row">
             <p>1</p>
