--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="row">
+    <div class="row --100">
         <div class="row">
             <img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/2/20/Adidas_Logo.svg" alt="">
         </div>
