--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <section>
+    <img src="https://img.freepik.com/free-vector/gradient-grainy-texture_23-2148981502.jpg?w=1480&t=st=1679095747~exp=1679096347~hmac=aab3d04ccafb4560a33958c60dbb5e1453fe300ee8ea82f734b0f4aac5e42f53" alt="" class="background">
     <div class="row --100">
         <div class="row">
             <img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/2/20/Adidas_Logo.svg" alt="">
@@ -18,5 +20,6 @@
             <p>3</p>
         </div>
     </div>
+    </section>
 </body>
 </html>
