--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <section>
+    <div class="container">
     <img src="https://img.freepik.com/free-vector/gradient-grainy-texture_23-2148981502.jpg?w=1480&t=st=1679095747~exp=1679096347~hmac=aab3d04ccafb4560a33958c60dbb5e1453fe300ee8ea82f734b0f4aac5e42f53" alt="" class="background">
     <div class="row --100">
         <div class="row">
@@ -19,6 +20,7 @@
             <p>2</p>
             <p>3</p>
         </div>
+    </div>
     </div>
     </section>
 </body>
