--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="row --10">
             <img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/2/20/Adidas_Logo.svg" alt="">
         </div>
-        <div class="row --40">
+        <div class="row --40 --bottom">
             <p>1</p>
             <p>2</p>
             <p>3</p>
