--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/2/20/Adidas_Logo.svg" alt="">
         </div>
         <div class="row --40 --bottom --relative">
-            <div class="background"></div>
+            <div class="background --black"></div>
             <p>1</p>
             <p>2</p>
             <p>3</p>
