--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <div class="row --10">
             <img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/2/20/Adidas_Logo.svg" alt="">
         </div>
-        <div class="row --40 --bottom --relative">
+        <div class="nav row --40 --bottom --relative">
             <div class="background --black"></div>
-            <p>1</p>
-            <p>2</p>
-            <p>3</p>
+            <a href="" class="nav__link">1</a>
+            <a href="" class="nav__link">2</a>
+            <a href="" class="nav__link">3</a>
         </div>
     </div>
     </div>
