--- a/index.html
+++ b/index.html
@@ -25,5 +25,18 @@
     </div>
     </div>
     </section>
+    <section>
+        <div class="container">
+            <div class="baner row">
+                <div class="row">
+                    <div class="row"></div>
+                    <div class="row"></div>
+                </div>
+                <div class="row">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e8/Dark_Rosaleen_Anarchy_1.svg/1000px-Dark_Rosaleen_Anarchy_1.svg.png" alt="" class="background">
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
