--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
         <div class="container">
             <div class="baner row">
                 <div class="row">
-                    <div class="row"></div>
+                    <div class="row">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat iure asperiores quos vitae dolor veritatis! Sit, amet perspiciatis. Eaque reprehenderit vel unde incidunt quaerat ex iure quam error culpa maiores!
+                    </div>
                     <div class="row"></div>
                 </div>
                 <div class="row">
