--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     </div>
                     <div class="row"></div>
                 </div>
-                <div class="row --relative">
+                <div class="row --100 --relative">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e8/Dark_Rosaleen_Anarchy_1.svg/1000px-Dark_Rosaleen_Anarchy_1.svg.png" alt="" class="background">
                 </div>
             </div>
