--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                     <div class="row"></div>
                 </div>
                 <div class="row --100 --relative">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi recusandae, modi eaque reprehenderit, ullam delectus unde quam architecto inventore, enim mollitia consequatur! Similique obcaecati temporibus explicabo, nulla ad eos ab.
                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e8/Dark_Rosaleen_Anarchy_1.svg/1000px-Dark_Rosaleen_Anarchy_1.svg.png" alt="" class="background">
                 </div>
             </div>
