--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     neque tempora id beatae, commodi dicta? Autem impedit perspiciatis ratione cupiditate facilis tempore laudantium nemo ut quam et minima fuga, fugit voluptates voluptatem quas dolorem recusandae. Alias sed eaque illum reprehenderit temporibus veritatis.
                 </div>
                 <div class=" --40">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e8/Dark_Rosaleen_Anarchy_1.svg/1000px-Dark_Rosaleen_Anarchy_1.svg.png" alt="" class="background --100h">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e8/Dark_Rosaleen_Anarchy_1.svg/1000px-Dark_Rosaleen_Anarchy_1.svg.png" alt="" class="--100h">
                 </div>
             </div>
         </div>
