--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
         <div class="container">
             <div class="row --100">
                 <div class="--60">
-<h1>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque, possimus!</h1>
+                    <h1>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque, possimus!</h1>
+                    <div class="row">
+                        <a href="" class="btn">action1</a>
+                        <a href="" class="btn">action2</a>
+                    </div>
                 </div>
                 <div class="--40">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e8/Dark_Rosaleen_Anarchy_1.svg/1000px-Dark_Rosaleen_Anarchy_1.svg.png" alt="" class="banner --100">
