--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     </div>
                 </div>
                 <div class="--40">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e8/Dark_Rosaleen_Anarchy_1.svg/1000px-Dark_Rosaleen_Anarchy_1.svg.png" alt="" class="banner --100">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e8/Dark_Rosaleen_Anarchy_1.svg/1000px-Dark_Rosaleen_Anarchy_1.svg.png" alt="" class="banner__img --100">
                 </div>
             </div>
         </div>
