--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="row --100">
                 <div class="--60">
                     <h1>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque, possimus!</h1>
-                    <div class="row">
+                    <div class="row banner__actions">
                         <a href="" class="btn">action1</a>
                         <a href="" class="btn">action2</a>
                     </div>
