--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="row --10">
             <img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/2/20/Adidas_Logo.svg" alt="">
         </div>
-        <div class="nav row --40 --bottom --relative">
+        <div class="header__nav row --40 --bottom --relative">
             <div class="background --black"></div>
             <a href="" class="nav__link">1</a>
             <a href="" class="nav__link">2</a>
@@ -25,7 +25,7 @@
     </div>
     </div>
     </section>
-    <section>
+    <section class="--paddingtb">
         <div class="container">
             <div class="row --100">
                 <div class="--60">
