--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <img src="https://img.freepik.com/free-vector/gradient-grainy-texture_23-2148981502.jpg?w=1480&t=st=1679095747~exp=1679096347~hmac=aab3d04ccafb4560a33958c60dbb5e1453fe300ee8ea82f734b0f4aac5e42f53" alt="" class="background">
     <div class="header row --100">
         <div class="row --10">
-            <img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/2/20/Adidas_Logo.svg" alt="">
+            <img class="header__logo" src="https://upload.wikimedia.org/wikipedia/commons/2/20/Adidas_Logo.svg" alt="">
         </div>
         <div class="header__nav row --40 --bottom --relative">
             <div class="background --black"></div>
