--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <a href="" class="btn">action2</a>
                     </div>
                 </div>
-                <div class="--40">
+                <div class="--35>
                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e8/Dark_Rosaleen_Anarchy_1.svg/1000px-Dark_Rosaleen_Anarchy_1.svg.png" alt="" class="banner__img --100">
                 </div>
             </div>
